# skillcapped-generator

./: .gitignore  .nextest.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  app.rc  build.rs  codecov.yml  create_icon.ps1  lcov.info  skillcapped-generator.exe.manifest  sonar-project.properties
.config/: nextest.toml
.github/: BRANCH_PROTECTION.md
.github/workflows/: release.yml  tests.yml
docs/: QUALITY_SETUP.md
src/: app.rs  input.rs  lib.rs  main.rs  terminal.rs  ui.rs
src/app/: mod.rs
src/input/: mod.rs  tests.rs
src/terminal/: mod.rs  tests.rs
src/ui/: mod.rs  tests.rs
tests/: app_tests.rs  input_tests.rs  integration_tests.rs  terminal_tests.rs  ui_tests.rs
