[package]
name = "skillcapped-generator"
version = "2.1.0"
edition = "2021"
authors = ["Xerrion <https://github.com/Xerrion>"]
description = "SkillCapped Unlock Code Generator - A terminal-based tool for generating unlock codes for SkillCapped with Battle.net ID validation"
license = "MIT"
homepage = "https://github.com/Xerrion/skillcapped-generator"
repository = "https://github.com/Xerrion/skillcapped-generator"
readme = "README.md"
keywords = ["skillcapped", "battlenet", "unlock-code", "tui", "terminal"]
categories = ["command-line-utilities", "games"]
build = "build.rs"

[[bin]]
name = "skillcapped-generator"
path = "src/main.rs"

[lib]
name = "skillcapped_generator"
path = "src/lib.rs"

[dependencies]
arboard = "3.6.0"
base64 = "0.22.1"
crossterm = "0.29.0"
ratatui = "0.29.0"

[build-dependencies]
embed-resource = "3.0.5"

[profile.release]
# Optimize for size and security
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Windows-specific optimizations
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "shellapi"] }

# Development profile
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
